fix user icon align

--- a/src/scss/professor.scss
+++ b/src/scss/professor.scss
@@ -1,28 +1,37 @@
 #home {
   background-color: #DEE2E6;
   height: 100vh;
+  display: flex;
   justify-content: center;
   align-items: center;
   padding-top: toRem(70);
+  flex-direction: column;
 }
 
 .tab{
   background-color: #FFFFFF;
-  padding-top: toRem(15);
-  padding-bottom: toRem(15);
-  display: flex;
-  justify-content: end;
-  border-radius: 15px;
-  padding-right: toRem(25);
-  margin-left: toRem(75);
-  margin-right: toRem(75);
+  height: toRem(50);
   margin-bottom: toRem(25);
-  
+  width: toRem(1260);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  border-radius: 1000px;
+  padding: 0px 24px;
+  img{
+    align-self: center;
+    cursor: pointer;
+    object-fit: cover;
+    height: toRem(25);
+  }
 }
 
 .cont{
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #FFFFFF;
-  border-radius: 8px;
+  border-radius: 20px;
+  width: toRem(1260);
   display: flex;
   flex-direction: column;
   margin-left: toRem(75);
@@ -50,6 +59,7 @@
 }
 
 .item{
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #DEE2E6;
   margin-bottom: toRem(21);
   padding-left: toRem(40);
